A bunch of visual fixes
* Better adjusting for the top navigation bar links + watch star
** TODO: I'm still not 100% happy with the links but this'll do for now.
* Don't hard-code in avatar dimensions when using SocialProfile avatars, that won't work the way you think it does and it'll just make the avatars look blurry
** Had to ditch some IE8 compatibility code to make this work. Oh well.
** Also swapped avatar size from large (75x75 pixels) to medium (30x30 pixels)
* Show both Echo notifications and alerts in the top bar

Also includes some random coding style tweaks.

This is all tested, though only on MW 1.35 (yes, I had to make two tiny hacks, not present here, to make the code run on 1.35) and only on the "desktop" view.

(cherry picked from commit a787cabdb688492d8675ca4747abaff1fcabf0c2)

--- a/components/main/watchstar.less
+++ b/components/main/watchstar.less
@@ -8,7 +8,7 @@
 	display: block;
 	width: 26px;
 	/* This hides the text but shows the background image */
-	padding-top: 3.1em;
+	padding-top: 1.5em;
 	margin-top: 0;
 	/* Only applied in IE6 */
 	_margin-top: -0.8em;
